@@ -20,6 +20,9 @@ Changes log
        - XEE injection security fix. Issue #826. Reported by Alvaro Munoz.
        - OData not passing null when property not marked nullable, issue #663.
          Reported by Carl J. Mosca and contributed by Luke Adams.
+       - Android ICS: needs fixing for HttpUrlConnectionCall.getResponseHeaders, issue #548.
+         Reported by Bobby Sawhney.
+
 - 2.1.6 (12/05/2013)
     - Bug fixed
        - Fixed issue #809 regression introduced when handling issues #774 and #778.
